@@ -7,6 +7,7 @@
 * Deprecated `next_id` function in favor of `new_id`.
 * Added `identity` and `has_identity` functions.
 * Added `singleton` and `events` functions.
+* Added `select_all` function.
 
 2.4.0
 * Handle HTTP errors 502 and 504 as `Fauna::UnavailableError`.
